# aim_cli

./: .gitignore  LICENSE  README.md  model_repos.yaml  pyproject.toml  requirements.txt  verify_delete.sh
aim_cli/: config.py  main.py
aim_cli/commands/: model.py  repo.py
aim_cli/storage/: base.py  local.py  s3.py  sftp.py
